@@ -9,5 +9,6 @@
  <li><a href="/d9">Discussion board</a></li>
  <li><a href="/d6">FAQ</a></li>
  <li><a href="/d7">About us</a></li>
+ <li><a href="/d11">Database API</a></li>
  <li><a href="/d8">Development</a></li>
 </ul>
